<resources>
    <string name="app_name">SecureChatApplication</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_message">Welcome to SecureChat</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- 在 res/values/strings.xml 中 -->
    <string-array name="chat_contacts">
        <item>User 1</item>
        <item>User 2</item>
        <!-- 可以继续添加更多用户 -->
    </string-array>
    <string name="SurveyHeader">Company Feedback Survey</string>
    <string name="SurveyIntroMessage">For each question, enter a number between 1–10</string>
    <string name="SurveyQuestion1">How would you rate the company\'s working environment?</string>
    <string name="SurveyQuestion2">How would you rate the company\'s work life balance?</string>
    <string name="SurveyQuestion3">How would you rate your interactions with your colleagues?</string>
    <string name="SurveyQuestion4">How would you rate your experience with this app this month?</string>
    <string name="SubmitSurvey">Submit</string>
    <string name="ExitSurvey">Exit</string>
    <string name="InputDescription">Number from 1–10</string>
    <string name="HintExample">Example: 10</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="Call">Call</string>
    <string name="Messages">Messages</string>
    <string name="Account">Account</string>
    <string name="Survey">Survey</string>
    <string name="Home_Title">Home Page</string>

    <!-- Strings for calling someone -->
    <string name="Calling_Someone">Calling…</string>
    <string name="Calling_Someone_Fragment">Calling Fragment</string>
    <string name="Mute">Mute</string>
    <string name="Record">Record</string>
    <string name="Speaker">Speaker</string>
    <string name="End_Call">End Call</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="loginStart">Login</string>
    <string name="account_manager">Account Manager</string>
    <string name="create_account_button">Create Account</string>
    <string name="delete_account_button">Delete Account</string>
    <string name="edit_account">Edit Account</string>
    <string name="create_new_account">Create New Account</string>
    <string name="authority_level">Authority level</string>
    <string name="create">Create</string>
    <string name="edit_account_title">Edit Account</string>
    <string name="save_changes">Save Changes</string>
    <string name="new_password">New password</string>
    <string name="new_username">New username</string>

    <!-- Strings for login -->
    <string name="Login">Login</string>
    <string name="Username">Enter Username</string>
    <string name="Password">Enter Password</string>
    <string name="Submit">Submit</string>
    <string name="Login_Fragment">Login Fragment</string>
    <string name="CreateAccountPrevious">Previous</string>
    <string name="EditAccountPrevious">Previous</string>
    <string name="delete_accountHeader">Delete Account</string>
    <string name="delete">Delete</string>
    <string name="Deleteprevious">Previous</string>

    <string name="Send">Send</string>
    <string name="Enter_Message">Enter Message</string>
    <string name="create_enter_username">Enter username</string>
    <string name="successMessage">Success</string>
    <string name="defaultmessageplaceholder">DefaultMessage</string>
    <string name="messageresponsehome">Home</string>
    <string name="old_username">Old username</string>
    <string name="editaccountsuccess">The account was edited.</string>
    <string name="error">Error</string>
    <string name="the_old_username_was_not_found_or_the_new_name_was_taken">The old username was not found, or the new name was taken.</string>
    <string name="an_error_occured">An error occured.</string>
</resources>