<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/MessagesFragment"
        android:icon="@mipmap/chat"
        android:title="@string/Messages"
        android:enabled="true"/>
    <item
        android:id="@+id/CallingFragment"
        android:icon="@mipmap/call"
        android:title="@string/Call"
        android:enabled="true"/>
    <item
        android:id="@+id/HomeFragment"
        android:icon="@mipmap/home"
        android:title="@string/Home_Title"
        android:enabled="true"/>
    <item
        android:id="@+id/account_nav"
        android:icon="@mipmap/account"
        android:title="@string/Account"
        android:enabled="true"/>
    <item
        android:id="@+id/survey_nav"
        android:icon="@mipmap/survey"
        android:title="@string/Survey"
        android:enabled="true"/>
</menu>