<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".CallingPersonFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-66dp">

        <Button
            android:id="@+id/button_end_call"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="392dp"
            android:text="@string/End_Call"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calling_someone_title" />

        <Button
            android:id="@+id/button_speaker"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_marginTop="212dp"
            android:text="@string/Speaker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calling_someone_title" />

        <Button
            android:id="@+id/button_mute"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="140dp"
            android:text="@string/Mute"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calling_someone_title" />

        <Button
            android:id="@+id/button_record"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="32dp"
            android:text="@string/Record"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calling_someone_title" />

        <TextView
            android:id="@+id/calling_someone_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/Calling_Someone"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>